--- a/src/app/features/components/dashboard/general-overview/general-overview.component.html
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.html
@@ -68,7 +68,7 @@
             <mat-icon color="warn" svgIcon="circle-exclamation" aria-hidden="true"></mat-icon>
             <span>{{ bandwidthLimit?.error }}</span>
             <button
-              mat-icon-button
+              matIconButton
               (click)="loadBandwidthLimit()"
               matTooltip="Retry"
               aria-label="Retry loading bandwidth"
