--- a/src/app/features/modals/password-manager-modal/password-manager-modal.component.html
+++ b/src/app/features/modals/password-manager-modal/password-manager-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal">
   <div class="modal-header" data-tauri-drag-region>
-    <button disabled>
+    <button matButton disabled>
       <mat-icon></mat-icon>
     </button>
 
@@ -26,7 +26,7 @@
       </div>
     }
 
-    <button mat-icon-button (click)="close()" aria-label="Close password manager dialog">
+    <button matIconButton (click)="close()" aria-label="Close password manager dialog">
       <mat-icon svgIcon="circle-xmark"></mat-icon>
     </button>
   </div>
@@ -77,7 +77,7 @@
               </div>
               <div class="card-actions">
                 <button
-                  mat-raised-button
+                  matButton="filled"
                   color="primary"
                   (click)="switchToSecurityTab()"
                   class="action-button-large"
@@ -87,7 +87,7 @@
                 </button>
 
                 <button
-                  mat-stroked-button
+                  matButton="outlined"
                   (click)="learnMoreAboutEncryption()"
                   class="action-button-large"
                 >
@@ -250,8 +250,7 @@
                 </div>
                 <div class="card-actions">
                   <button
-                    mat-raised-button
-                    color="primary"
+                    matButton="filled"
                     [disabled]="!canValidatePassword || loading.isValidating"
                     (click)="validatePassword()"
                   >
@@ -265,7 +264,7 @@
 
                   @if (!hasStoredPassword) {
                     <button
-                      mat-stroked-button
+                      matButton="outlined"
                       [disabled]="!canStorePassword || loading.isStoringPassword"
                       (click)="storePassword()"
                     >
@@ -280,7 +279,7 @@
 
                   @if (hasStoredPassword) {
                     <button
-                      mat-stroked-button
+                      matButton="outlined"
                       color="warn"
                       class="action-button"
                       [disabled]="loading.isRemovingPassword"
@@ -296,7 +295,7 @@
                   }
 
                   @if (lockoutStatus?.is_locked) {
-                    <button mat-stroked-button class="action-button" (click)="resetLockout()">
+                    <button matButton="outlined" class="action-button" (click)="resetLockout()">
                       <mat-icon svgIcon="refresh"></mat-icon>
                       Reset Lockout
                     </button>
@@ -416,8 +415,7 @@
             <div class="card-actions">
               @if (!isConfigEncrypted) {
                 <button
-                  mat-raised-button
-                  color="primary"
+                  matButton="filled"
                   (click)="encryptConfig()"
                   [disabled]="!canEncrypt || loading.isEncrypting"
                   class="action-button-large"
@@ -431,7 +429,7 @@
                 </button>
               } @else {
                 <button
-                  mat-stroked-button
+                  matButton="outlined"
                   color="warn"
                   (click)="unencryptConfig()"
                   [disabled]="!canUnencrypt || loading.isUnencrypting"
@@ -546,7 +544,7 @@
 
               <div class="card-actions">
                 <button
-                  mat-raised-button
+                  matButton="filled"
                   color="primary"
                   (click)="changePassword()"
                   [disabled]="!canChangePassword || loading.isChangingPassword"
@@ -581,7 +579,7 @@
               </div>
               <div class="card-actions">
                 <button
-                  mat-raised-button
+                  matButton="filled"
                   color="primary"
                   (click)="switchToSecurityTab()"
                   class="action-button-large"
@@ -622,7 +620,7 @@
               </div>
               <div class="card-actions">
                 <button
-                  mat-stroked-button
+                  matButton="outlined"
                   (click)="setEnvPassword()"
                   [disabled]="!hasStoredPassword || loading.isSettingEnv"
                 >
@@ -635,7 +633,7 @@
                 </button>
 
                 <button
-                  mat-stroked-button
+                  matButton="outlined"
                   color="warn"
                   (click)="clearEnvPassword()"
                   [disabled]="!hasEnvPassword || loading.isClearingEnv"
@@ -685,7 +683,7 @@
                 </div>
                 <div class="card-actions">
                   <button
-                    mat-stroked-button
+                    matButton="outlined"
                     color="accent"
                     (click)="resetLockout()"
                     [disabled]="loading.isResettingLockout"
