--- a/src/app/features/modals/settings/about-modal/about-modal.component.scss
+++ b/src/app/features/modals/settings/about-modal/about-modal.component.scss
@@ -29,6 +29,7 @@
     flex-direction: row-reverse !important;
     height: 54px !important;
     box-shadow: var(--box-shadow);
+    color: var(--app-text-color);
   }
 
   // Stacked Buttons Group
