--- a/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.html
+++ b/src/app/shared/modals/update-confirmation-dialog/update-confirmation-dialog.component.html
@@ -1,14 +1,14 @@
 <div class="update-modal">
   <!-- Modal Header -->
   <div class="modal-header" data-tauri-drag-region>
-    <button mat-icon-button aria-label="Help information">
+    <button matIconButton aria-label="Help information">
       <mat-icon svgIcon="question"></mat-icon>
     </button>
     <p>
       <mat-icon svgIcon="circle-up" aria-hidden="true"></mat-icon>
       Update Rclone
     </p>
-    <button mat-icon-button (click)="cancel()" aria-label="Close dialog">
+    <button matIconButton (click)="cancel()" aria-label="Close dialog">
       <mat-icon svgIcon="circle-xmark"></mat-icon>
     </button>
   </div>
@@ -35,7 +35,7 @@
         <span class="version latest">{{ data.latest_version_clean }}</span>
       </div>
       <mat-divider></mat-divider>
-      <button mat-stroked-button color="accent" (click)="openChangelog()">
+      <button matButton="outlined" color="accent" (click)="openChangelog()">
         <mat-icon svgIcon="open-link"></mat-icon>
         View changelog
       </button>
@@ -43,7 +43,7 @@
 
     <!-- Warning Section -->
     <div class="warning-section">
-      <mat-icon svgIcon="circle-exclamation" color="warn" aria-hidden="true"></mat-icon>
+      <mat-icon svgIcon="circle-exclamation" aria-hidden="true"></mat-icon>
       <p>
         The rclone engine will be restarted after the update. Any ongoing operations will be
         interrupted.
@@ -53,7 +53,7 @@
 
   <!-- Modal Actions -->
   <div class="modal-actions">
-    <button mat-raised-button color="primary" (click)="confirm()">
+    <button matButton="filled" (click)="confirm()">
       <mat-icon svgIcon="circle-up"></mat-icon>
       Update Now
     </button>
