--- a/src/app/shared/remote-config/components/interactive-config-step/interactive-config-step.component.html
+++ b/src/app/shared/remote-config/components/interactive-config-step/interactive-config-step.component.html
@@ -130,7 +130,7 @@
 
       <div class="actions">
         <button
-          mat-raised-button
+          matButton="filled"
           color="primary"
           (click)="onContinue()"
           [disabled]="isButtonDisabled()"
