--- a/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
+++ b/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
@@ -3,14 +3,14 @@
   <div class="modal-header" data-tauri-drag-region>
     <button
       (click)="toggleSearch()"
-      mat-icon-button
+      matIconButton
       [attr.aria-label]="searchVisible ? 'Hide search' : 'Show search'"
       [attr.aria-expanded]="searchVisible"
     >
       <mat-icon svgIcon="search"></mat-icon>
     </button>
     <p>Keyboard Shortcuts</p>
-    <button mat-icon-button (click)="close()" aria-label="Close shortcuts dialog">
+    <button matIconButton (click)="close()" aria-label="Close shortcuts dialog">
       <mat-icon svgIcon="circle-xmark"></mat-icon>
     </button>
   </div>
@@ -60,7 +60,7 @@
         <mat-icon svgIcon="search" class="empty-icon"></mat-icon>
         <h3>No shortcuts found</h3>
         <p>Try searching for a different term or clear your search.</p>
-        <button mat-raised-button color="accent" (click)="clearSearch()">Clear Search</button>
+        <button matButton="filled" color="accent" (click)="clearSearch()">Clear Search</button>
       </div>
     }
   </div>
